# Foreign-Trade-Information

./: .env.example  README.md  pyproject.toml  requirements.txt
app/: __init__.py  cli.py  config.py  exceptions.py  logging_setup.py  models.py  pipeline.py  scheduler.py
app/notify/: webhook.py
app/render/: article_builder.py  html_postprocess.py  markdown_renderer.py
app/render/templates/: daily_news.html.j2  daily_news.md.j2
app/sources/: calendar_info.py  dedup.py  exchange_rate.py  news_http.py  news_rss.py
app/storage/: file_store.py  sqlite_store.py  state_store.py
app/wechat/: __init__.py  auth.py  client.py  draft.py  media.py  publish.py  schemas.py
data/output/: 2026-04-20.html  2026-04-20.md
tests/: test_cli_dates.py  test_exchange_rate.py  test_html_postprocess.py  test_markdown_renderer.py  test_news_dedup.py  test_pipeline.py  test_state_store.py  test_template_syntax.py  test_wechat_client.py  test_wechat_media.py
