[project]
name = "wx-auto-publisher"
version = "0.1.0"
description = "微信公众号自动发布系统"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "APScheduler>=3.10.4",
  "typer>=0.12.3",
  "jinja2>=3.1.4",
  "markdown>=3.6",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.2.2"
,
  "pytest-asyncio>=0.23.7"
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
